--- a/index.html
+++ b/index.html
@@ -239,5 +239,6 @@
                     </table>
                 </div>
             </div>
+            <p>Ultima atualização: 17/02/2025 | 21:15 </p>
         </div>
     
