--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <script>
         async function carregarJogadores() {
             try {
-                let response = await fetch("http://127.0.0.1:8000/jogadores", {
+                let response = await fetch("https://duolingo-challeng.onrender.com/jogadores", {
                     method: "GET"
                 });
                 let data = await response.json();
