update_linha_html

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 tabela.innerHTML = ""; // Limpa a tabela antes de adicionar novos dados
 
                 data.jogadores.forEach(jogador => {
-                    // let linha = document.createElement("tr");
+                    let linha = document.createElement("tr");
                     linha.innerHTML = `
                         <tr>
                             <td class="left">
