Atualizando posições no ranking

--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                 pontos como um viciado em lições e deixar seus amigos pra trás! Quem vai ser o rei ou a rainha do XP?
                 Bora aprender e competir! 🏆✨</p>
             <div>
-                <h3>Hanking Geral</h3>
+                <h3>Ranking Geral</h3>
+                <h3 id="loading">Carregando jogadores...</h3>
                 <table>
                     <tbody id="tabela-jogadores">
                         <!-- Os dados serão inseridos aqui -->
@@ -102,22 +103,27 @@
     </div>
 
     <script>
+        let carregando = false; // Variável para evitar múltiplas requisições
+
         async function carregarJogadores() {
             try {
-                let response = await fetch("https://duolingo-challeng.onrender.com/jogadores", {
+                // let response = await fetch("https://duolingo-challeng.onrender.com/jogadores", {
+                let response = await fetch("http://127.0.0.1:8000/jogadores", {
                     method: "GET"
                 });
                 let data = await response.json();
                 let tabela = document.getElementById("tabela-jogadores");
+                let loading = document.getElementById("loading");
+
 
                 tabela.innerHTML = ""; // Limpa a tabela antes de adicionar novos dados
-
+                console.log(data);
                 data.jogadores.forEach(jogador => {
                     let linha = document.createElement("tr");
                     linha.innerHTML = `
                         <tr>
                             <td class="left">
-                                <span>1º</span>
+                                <span>${jogador.posicao}</span>
                                 <img src="assets/avatar/${jogador.userId}.png" alt="Shimaroots">
                                 <h5 class="username">${jogador.displayName}</h5>
                             </td>
@@ -129,6 +135,9 @@
             } catch (error) {
                 console.error("Erro ao carregar jogadores:", error);
             }
+            loading.style.display = "none"; // Esconde o loading
+            carregando = false; // Libera a variável após a requisição
+
         }
 
         carregarJogadores();
