--- a/html/regras.html
+++ b/html/regras.html
@@ -12,14 +12,17 @@
 <body>
     <div class="container">
         <header class="flex js_between full_w">
-            <img class="duo_img" src="../../assets/images/header_ghallenger.svg" alt="">
+            <a class="icon_home_challenger" href="../index.html">
+
+                <img class="duo_img" src="../assets/images/header_ghallenger.svg" alt="">
+            </a>
             <div class="button_header flex al_center js_around">
                 <a href="#" class="al_center js_center">
-                    <img class="icon_button" src="../../assets/images/icon_diario.svg" alt="">
+                    <img class="icon_button" src="../assets/images/icon_diario.svg" alt="">
                     <p class="text_button">DIÁRIO</p>
                 </a>
-                <a href="#" class="al_center js_center">
-                    <img class="icon_button" src="../../assets/images/icon_geral.svg" alt="">
+                <a href="../html/geral.html" class="al_center js_center">
+                    <img class="icon_button" src="../assets/images/icon_geral.svg" alt="">
                     <p class="text_button">GERAL</p>
                 </a>
             </div>
@@ -27,7 +30,7 @@
         <div class="regras flex_col">
             <div class="topico flex_col">
                 <div class="subtitle flex al_center">
-                    <img class="icon_title" src="../../assets/images/icon_regras.svg" alt="">
+                    <img class="icon_title" src="../assets/images/icon_regras.svg" alt="">
                     <h2>REGRAS</h2>
                 </div>
                 <p>
@@ -42,25 +45,15 @@
                     <h2>COMO FUNCIONA?</h2>
                 </div>
                 <p>
-                <ul>
-                    <li>
-                        <p>
-                            A competição dura 3 meses!
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            O objetivo é acumular pontos praticando idiomas no Duolingo 🎯
-                        </p>
-                    </li>
-                    <li>
-                        <p>
-                            Ao final, os 5 primeiros colocados ganham um prêmio especial: não pagam nada no nosso
-                            encerramento com salgadinhos! 🥳🍕
-                        </p>
-                    </li>
-                </ul>
+                    🔹 A competição dura 3 meses!    
                 </p>
+                <p>
+                    🔹 O objetivo é acumular pontos praticando idiomas no Duolingo 🎯  
+                </p>
+                <p>
+                    🔹 Ao final, os 5 primeiros colocados ganham um prêmio especial: não pagam nada no nosso
+                    encerramento com salgadinhos! 🥳🍕 
+                </p> 
             </div>
             <div class="topico flex_col">
                 <div class="title flex al_center ">
