--- a/html/regras.html
+++ b/html/regras.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/regras.css">
@@ -13,11 +14,10 @@
     <div class="container">
         <header class="flex js_between full_w">
             <a class="icon_home_challenger" href="../index.html">
-
                 <img class="duo_img" src="../assets/images/header_ghallenger.svg" alt="">
             </a>
             <div class="button_header flex al_center js_around">
-                <a href="#" class="al_center js_center">
+                <a href="../html/diario.html" class="al_center js_center">
                     <img class="icon_button" src="../assets/images/icon_diario.svg" alt="">
                     <p class="text_button">DIÁRIO</p>
                 </a>
@@ -45,15 +45,15 @@
                     <h2>COMO FUNCIONA?</h2>
                 </div>
                 <p>
-                    🔹 A competição dura 3 meses!    
+                    🔹 A competição dura 3 meses!
                 </p>
                 <p>
-                    🔹 O objetivo é acumular pontos praticando idiomas no Duolingo 🎯  
+                    🔹 O objetivo é acumular pontos praticando idiomas no Duolingo 🎯
                 </p>
                 <p>
                     🔹 Ao final, os 5 primeiros colocados ganham um prêmio especial: não pagam nada no nosso
-                    encerramento com salgadinhos! 🥳🍕 
-                </p> 
+                    encerramento com salgadinhos! 🥳🍕
+                </p>
             </div>
             <div class="topico flex_col">
                 <div class="title flex al_center ">
@@ -61,13 +61,13 @@
                     <h2>CÁCULO DE PONTOS</h2>
                 </div>
                 <p>
-                    🔹 Pontos XP = 10 * log(xp diário) ⚡    
+                    🔹 Pontos XP = 10 * log(xp diário) ⚡
                 </p>
                 <p>
-                    🔹 Pontos de Ofensiva = Mantenha a ofensiva e ganhe 5 pontos extras 🔥🔥  
+                    🔹 Pontos de Ofensiva = Mantenha a ofensiva e ganhe 5 pontos extras 🔥🔥
                 </p>
                 <p>
-                    🔹 Total = Pontos XP + Pontos Ofensiva ✅  
+                    🔹 Total = Pontos XP + Pontos Ofensiva ✅
                 </p>
             </div>
             <div class="topico flex_col">
@@ -76,7 +76,7 @@
                     <h2>IMPORTANTE</h2>
                 </div>
                 <p>
-                    Apenas XP de idiomas conta! 🚨 Matemática e Música não somam pontos!   
+                    Apenas XP de idiomas conta! 🚨 Matemática e Música não somam pontos!
                 </p>
             </div>
             <div class="topico flex_col">
@@ -85,12 +85,13 @@
                     <h2>ENCERRAMENTO!</h2>
                 </div>
                 <p>
-                    No final dos 3 meses, vamos celebrar com um racha nos salgadinhos! 🍕🥟 Os 5 primeiros colocados comem de graça! 😋    
+                    No final dos 3 meses, vamos celebrar com um racha nos salgadinhos! 🍕🥟 Os 5 primeiros colocados
+                    comem de graça! 😋
                 </p>
             </div>
             <div class="topico flex_col">
                 <p>
-                    🚀💬 Bora jogar e evoluir juntos? Quem será o grande campeão? 🏅    
+                    🚀💬 Bora jogar e evoluir juntos? Quem será o grande campeão? 🏅
                 </p>
             </div>
         </div>
