--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </header>
         <div class=" options flex_col al_center">
             <img class="duo_img" src="./assets/images/duo_home_img.png" alt="">
-            <a href="#" class="al_center js_center">
+            <a href="./html/diario.html" class="al_center js_center">
                 <img class="icon_button" src="./assets/images/icon_diario.svg" alt="">
                 <p class="text_button">DIÁRIO</p>
             </a>
