--- a/html/regras.html
+++ b/html/regras.html
@@ -17,7 +17,7 @@
                 <img class="duo_img" src="../assets/images/header_ghallenger.svg" alt="">
             </a>
             <div class="button_header flex al_center js_around">
-                <a href="../html/diario.html" class="al_center js_center">
+                <a href="#" class="al_center js_center">
                     <img class="icon_button" src="../assets/images/icon_diario.svg" alt="">
                     <p class="text_button">DIÁRIO</p>
                 </a>
